# OpenDocument.core

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py  renovate.json
.travis/: edit-diff.js  (+9 more)
access/: CMakeLists.txt
access/include/access/: CfbStorage.h  ChildStorage.h  FileUtil.h  Path.h  Storage.h  StorageUtil.h  Stream.h  StreamUtil.h  SystemStorage.h  ZipStorage.h
access/src/: CfbStorage.cpp  ChildStorage.cpp  FileUtil.cpp  Path.cpp  StorageUtil.cpp  StreamUtil.cpp  SystemStorage.cpp  ZipStorage.cpp
cli/: CMakeLists.txt  Dockerfile
cli/src/: back_translate.cpp  meta.cpp  server.cpp  translate.cpp
common/: CMakeLists.txt
common/include/common/: AbstractDocument.h  Constants.h  CssWriter.h  Document.h  File.h  GenericDocument.h  Html.h  HtmlTranslation.h  HtmlWriter.h  MapUtil.h  StringUtil.h  TableCursor.h  TablePosition.h  TableRange.h  TranslationContext.h  XmlUtil.h
common/src/: AbstractDocument.cpp  Constants.cpp  CssWriter.cpp  GenericDocument.cpp  Html.cpp  HtmlTranslation.cpp  HtmlWriter.cpp  StringUtil.cpp  TableCursor.cpp  TablePosition.cpp  TableRange.cpp  XmlUtil.cpp
html/: CMakeLists.txt
html/include/html/: Html.h
html/src/: Html.cpp  HtmlTranslation.cpp
main/: CMakeLists.txt  back_translate.cpp  odrmain.cpp  translate.cpp
odf/: CMakeLists.txt
odf/include/odf/: OpenDocument.h  OpenDocumentContentTranslator.h  OpenDocumentContext.h  OpenDocumentCrypto.h  OpenDocumentMeta.h  OpenDocumentStyleTranslator.h  OpenDocumentTranslator.h
odf/src/: Common.cpp  Common.h  ContentTranslator.cpp  ContentTranslator.h  Context.h  Crypto.cpp  Crypto.h  Meta.cpp  Meta.h  OpenDocument.cpp  OpenDocumentContentTranslator.cpp  OpenDocumentCrypto.cpp  OpenDocumentMeta.cpp  OpenDocumentStyleTranslator.cpp  OpenDocumentText.cpp  OpenDocumentText.h  OpenDocumentTranslator.cpp  StyleTranslator.cpp  StyleTranslator.h  Text.cpp  Text.h
odr/: CMakeLists.txt
odr/include/odr/: Config.h  Document.h  DocumentElements.h  DocumentNoExcept.h  Elements.h  Exception.h  File.h  FileNoExcept.h  GenericDocument.h  Meta.h  OpenDocument.h  OpenDocumentReader.h  Reader.h  Server.h
odr/src/: Document.cpp  DocumentElements.cpp  DocumentNoExcept.cpp  Elements.cpp  File.cpp  FileNoExcept.cpp  GenericDocument.cpp  Meta.cpp  OpenDocumentReader.cpp  OpenStrategy.cpp  OpenStrategy.h  Reader.cpp  Server.cpp  SignalHandler.cpp  SignalHandler.h
oldms/: CMakeLists.txt
oldms/include/oldms/: LegacyMicrosoft.h
oldms/src/: LegacyMicrosoft.cpp
ooxml/: CMakeLists.txt
ooxml/include/ooxml/: OfficeOpenXml.h  OfficeOpenXmlCrypto.h  OfficeOpenXmlDocumentTranslator.h  OfficeOpenXmlMeta.h  OfficeOpenXmlPresentationTranslator.h  OfficeOpenXmlTranslator.h  OfficeOpenXmlWorkbookTranslator.h
ooxml/src/: Context.h  Crypto.cpp  Crypto.h  DocumentTranslator.cpp  DocumentTranslator.h  Meta.cpp  Meta.h  OfficeOpenXml.cpp  OfficeOpenXmlCrypto.cpp  OfficeOpenXmlDocumentTranslator.cpp  OfficeOpenXmlMeta.cpp  OfficeOpenXmlPresentationTranslator.cpp  OfficeOpenXmlTranslator.cpp  OfficeOpenXmlWorkbookTranslator.cpp  PresentationTranslator.cpp  PresentationTranslator.h  WorkbookTranslator.cpp  WorkbookTranslator.h
test/: .clang-tidy  BackTranslationTest.cpp  CMakeLists.txt  CfbCryptoTest.cpp  CssWriterTest.cpp  DataDrivenTests.cpp  DecryptionTest.cpp  DocumentTest.cpp  FileNoExcept.cpp  FileTest.cpp  HtmlWriterTest.cpp  MicrosoftBackTranslationTest.cpp  MicrosoftOpenXmlFileTest.cpp  MicrosoftTranslationTest.cpp  MsCfbStorageTest.cpp  OfficeOpenXmlCryptoTest.cpp  OfficeOpenXmlMetaTest.cpp  OoxmlCryptoTest.cpp  OpenDocumentBackTranslationTest.cpp  OpenDocumentFileTest.cpp  OpenDocumentMetaTest.cpp  OpenDocumentTextTest.cpp  OpenDocumentTranslationHelperTest.cpp  OpenDocumentTranslationTest.cpp  PathTest.cpp  SignalHandlerTest.cpp  StarViewMetafileTest.cpp  SvmTest.cpp  TableCursorTest.cpp  TableLocationTest.cpp  TablePositionTest.cpp  TableRangeTest.cpp  TestConstants.cpp.in  TestMeta.cpp  TestMeta.cpp.in  TestMeta.h  TextTranslatorTest.cpp  TranslateTest.cpp  TranslationHelperTest.cpp  TranslationTest.cpp  (+20 more)
test/access/: zip_storage_test.cpp
test/cfb/: cfb_archive_test.cpp  cfb_file_test.cpp
test/common/: PathTest.cpp  TableCursorTest.cpp  TablePositionTest.cpp  TableRangeTest.cpp  archive_test.cpp  cache_test.cpp  path_test.cpp  table_cursor_test.cpp  table_position_test.cpp  table_range_test.cpp
test/docker/: Dockerfile  README.md  compare_output_server.sh  requirements.txt
test/downstream/: CMakeLists.txt  conanfile.txt  main.cpp
test/downstream/cmake/: conan.cmake
test/internal/cfb/: cfb_archive_test.cpp
test/internal/common/: archive_test.cpp  cache_test.cpp  table_cursor_test.cpp  table_position_test.cpp  table_range_test.cpp
test/internal/ooxml/: ooxml_crypto_test.cpp
test/internal/zip/: miniz_test.cpp  zip_archive_test.cpp
test/odf/: OpenDocumentTextTest.cpp
test/ooxml/: OoxmlCryptoTest.cpp  ooxml_crypto_test.cpp
test/scripts/: .html-tidy  README.md  compare_output.py  compare_output.sh  compare_output_server.py  compare_output_server.sh  compare_test_outputs.py  html-tidy-config  html_render_diff.py  requirements.txt  tidy_output.py  tidy_test_output.py
test/src/: document_path_test.cpp  document_test.cpp  file_no_except_test.cpp  file_test.cpp  html_output_test.cpp  html_test.cpp  logger_test.cpp  magic_test.cpp  odr_test.cpp  open_document_reader_test.cpp  output_reference_test.cpp  output_reference_tests.cpp  pdf2htmlEX_wrapper_test.cpp  quantity_test.cpp  table_position_test.cpp  test_constants.cpp.in  test_info.cpp.in  test_info.hpp  test_main.cpp  test_util.cpp  test_util.h  test_util.hpp  wvWare_wrapper_test.cpp
test/src/internal/: magic_test.cpp
test/src/internal/cfb/: cfb_archive_test.cpp
test/src/internal/common/: archive_test.cpp  cache_test.cpp  document_path_test.cpp  path_test.cpp  table_cursor_test.cpp  table_position_test.cpp  table_range_test.cpp
test/zip/: miniz_test.cpp  zip_archive_test.cpp  zip_file_test.cpp  zip_storage_test.cpp
(+1328 files in other folders)
